--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "website",
 	"version": "0.0.1",
 	"private": true,
+	"license": "GPL-3.0-only",
 	"scripts": {
 		"prepare": "husky",
 		"dev": "vite dev --open",
@@ -18,6 +19,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-cloudflare": "^4.4.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
@@ -42,7 +44,8 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"vitest": "^1.2.0",
+		"wrangler": "^3.56.0"
 	},
 	"type": "module"
 }
