--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"license": "GPL-3.0-only",
+	"packageManager": "yarn@1.22.19",
 	"scripts": {
 		"prepare": "husky",
 		"dev": "vite dev --open",
