--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"simplex-noise": "^4.0.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-inview": "^4.0.2",
 		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss": "^3.4.3",
